--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ github.Amadidominic15 }}
+        username: ${{ github.repository }}
         password: ${{ secrets.TOKEN }}
 
     - name: Build and Push Image
