--- a/.github/workflows/adbuild.yaml
+++ b/.github/workflows/adbuild.yaml
@@ -37,6 +37,17 @@ jobs:
         push: true
         tags: ${{ env.REGISTRY }}/${{ github.repository }}/ads:${{ github.run_id }}
 
+    - name: Run Trivy scan
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: "${{ env.REGISTRY }}/${{ github.repository }}/ads:${{ github.run_id }}"
+        format: "sarif"
+        security-checks: "vuln,config,secret"
+        exit-code: 0
+        output: "trivy-report.sarif"
+        ignore-unfixed: true
+        severity: "CRITICAL,HIGH"
+
   # update-tag-in-helm-chart:
   #   runs-on: ubuntu-latest
 
