--- a/.github/workflows/adbuild.yaml
+++ b/.github/workflows/adbuild.yaml
@@ -33,7 +33,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./Dockerfile
+        file: adservice/Dockerfile
         push: true
         tags: ${{ env.REGISTRY }}/${{ github.repository }}/ads:${{ github.run_id }}
 
