update build checkout

--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -33,7 +33,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: checkoutservice
-        file: ./Dockerfile
+        file: checkoutservice/Dockerfile
         push: true
         tags: ${{ env.REGISTRY }}/${{ github.repository }}/ads:${{ github.run_id }}
 
