--- a/.github/workflows/adbuild.yaml
+++ b/.github/workflows/adbuild.yaml
@@ -32,21 +32,17 @@ jobs:
     - name: Build and Push Image
       uses: docker/build-push-action@v6
       with:
-        context: .
-        file: adservice/Dockerfile
+        context: adservice
         push: true
-        tags: ${{ env.REGISTRY }}/${{ github.repository }}/ads:${{ github.run_id }}
+        tags: ${{ env.REGISTRY }}/${{ github.actor }}/ads:${{ github.run_id }}
 
     - name: Run Trivy scan
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: "${{ env.REGISTRY }}/${{ github.repository }}/ads:${{ github.run_id }}"
-        format: "sarif"
-        security-checks: "vuln,config,secret"
-        exit-code: 0
-        output: "trivy-report.sarif"
-        ignore-unfixed: true
+        image-ref: "${{ env.REGISTRY }}/${{ github.actor }}/ads:${{ github.run_id }}"
+        format: "sarif" 
         severity: "CRITICAL,HIGH"
+        exit-code: 0
 
   # update-tag-in-helm-chart:
   #   runs-on: ubuntu-latest
