--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -65,3 +65,36 @@ jobs:
           format: "sarif" 
           severity: ${{ inputs.trivy_severity }}
           exit-code: 0
+
+  update-tag-in-helm-chart:
+    runs-on: ubuntu-latest
+
+    needs: build-and-push
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GHCR_TOKEN }}
+
+    - name: Update tag in Helm chart
+      run: |
+          IFS=',' read -r -a images <<< "${{ inputs.image_name }}"
+          IFS=',' read -r -a tags <<< "${{ inputs.tag }}"
+          
+          for i in "${!images[@]}"; do
+            sed -i "s|${images[i]}:.*|${images[i]}: ${tags[i]}|g" helm/microservices-chart/values.yaml
+          done
+
+    - name: login to github
+      run: |
+         git config --global user.email "amadidominic15@gmail.com"
+         git config --global user.name "amadidominic15"
+
+    - name: Commit and push changes
+      env: 
+        image: ${{ env.REGISTRY }}/${{ github.actor }}/${{ inputs.image_name }}
+      run: |
+        git add helm/microservices-chart/values.yaml
+        git commit -m "Update tag in Helm chart for ${{ env.image }} to ${{ inputs.tag }}"
+        git push
