--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -1,4 +1,4 @@
-name: BUILD PUSH SCAN AND UPDATE IMAGE FOR CHECKOUT SERVICE 
+name: BUILD PUSH SCAN AND UPDATE IMAGE FOR CHECKOUT SERVICE
 
 on:
   push:
@@ -7,65 +7,14 @@ on:
     paths:
       - 'checkoutservice/**'
       - '.github/workflows/checkout.yaml'
-
 jobs:
-  
-  build-and-push:
-    runs-on: ubuntu-latest
-    env:
-      REGISTRY: ghcr.io
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to GCR
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.TOKEN }}
-
-    - name: Build and Push Image
-      uses: docker/build-push-action@v6
-      with:
-        context: checkoutservice
-        push: true
-        tags: ${{ env.REGISTRY }}/${{ github.actor }}/checkout:${{ github.run_id }}
-
-    - name: Run Trivy scan
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: "${{ env.REGISTRY }}/${{ github.actor }}/checkout:${{ github.run_id }}"
-        format: "sarif" 
-        severity: "CRITICAL,HIGH"
-        exit-code: 0
-
-  # update-tag-in-helm-chart:
-  #   runs-on: ubuntu-latest
-
-  #   needs: build-and-push
-
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v4
-  #     with:
-  #       token: ${{ secrets.TOKEN }}
-
-  #   - name: Update tag in Helm chart
-  #     run: |
-  #       sed -i 's/tag: .*/tag: "${{github.run_id}}"/' ./online-boutique/helm/microservices-chart/values.yaml
-
-  #   - name: login to github
-  #     run: |
-  #        git config --global user.email "amadidominic15@gmail.com"
-  #        git config --global user.name "Amadidominic15"
-
-  #   - name: Commit and push changes
-  #     run: |
-  #       git add .online-boutique/helm/microservices-chart/values.yaml
-  #       git commit -m "Update tag in Helm chart"
-  #       git push
+  call-build-push-and-scan-cartservice-image:
+    uses: ./.github/workflows/build-docker-image.yaml
+    with:
+      image_name: checkout
+      dockerfile_path: checkoutservice/Dockerfile
+      context_path: checkoutservice
+      tag: ${{ github.run_id }}
+      trivy_severity: 'CRITICAL,HIGH'
+    secrets:
+      GHCR_TOKEN: ${{ secrets.TOKEN }}
