Update tag in Helm chart for ad to 18358525053

--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -7,6 +7,7 @@ services:
   adservice:
     image:
       repository: ghcr.io/amadidominic15/ad
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 9555
     resources:
@@ -19,6 +20,7 @@ services:
   cartservice:
     image:
       repository: ghcr.io/amadidominic15/cart
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 7070
     resources:
@@ -31,6 +33,7 @@ services:
   checkoutservice:
     image:
       repository: ghcr.io/amadidominic15/checkout
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 5050
     resources:
@@ -43,6 +46,7 @@ services:
   currencyservice:
     image:
       repository: ghcr.io/amadidominic15/currency
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 7000
     resources:
@@ -55,6 +59,7 @@ services:
   emailservice:
     image:
       repository: ghcr.io/amadidominic15/email
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 8080
     servicePort: 5000
@@ -68,6 +73,7 @@ services:
   frontend:
     image:
       repository: ghcr.io/amadidominic15/frontend
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 8080
     serviceType: ClusterIP
@@ -81,6 +87,7 @@ services:
   loadgenerator:
     image:
       repository: ghcr.io/amadidominic15/loadgenerator
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     replicas: 1
     users: "10"
@@ -95,6 +102,7 @@ services:
   paymentservice:
     image:
       repository: ghcr.io/amadidominic15/payment
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 50051
     resources:
@@ -107,6 +115,7 @@ services:
   productcatalogservice:
     image:
       repository: ghcr.io/amadidominic15/productcatalog
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 3550
     resources:
@@ -119,6 +128,7 @@ services:
   recommendationservice:
     image:
       repository: ghcr.io/amadidominic15/recommendation
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 8080
     resources:
@@ -131,6 +141,7 @@ services:
   shippingservice:
     image:
       repository: ghcr.io/amadidominic15/shipping
+madidominic15/ad/{n;s/tag:.*/tag: 18358525053/;}
       tag: "latest"
     port: 50051
     resources:
