--- a/.github/workflows/ad.yaml
+++ b/.github/workflows/ad.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'adservice/**'
       - '.github/workflows/ad.yaml'
+      - '.github/workflows/reuseable-build-docker-image.yaml'
 jobs:
   call-build-push-and-scan-adservice-image:
     uses: ./.github/workflows/reuseable-build-docker-image.yaml
