--- a/.github/workflows/reuseable-build-docker-image.yaml
+++ b/.github/workflows/reuseable-build-docker-image.yaml
@@ -75,6 +75,7 @@ jobs:
         token: ${{ secrets.GHCR_TOKEN }}
 
     - name: Update tag in Helm chart
+      working-directory: ${{ github.workspace }}
       run: |
           sed -i '/repository: ${{ env.REGISTRY }}\/${{ github.actor }}\/${{ inputs.image_name }}/{n;s/tag:.*/tag: "${{ inputs.tag }}"/;}' online-boutique/helm/microservices-chart/values.yaml
 
