--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -2,6 +2,7 @@ services:
   adservice:
     image:
       repository: ghcr.io/amadidominic15/ad
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 9555
     resources:
@@ -14,6 +15,7 @@ services:
   cartservice:
     image:
       repository: ghcr.io/amadidominic15/cart
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 7070
     resources:
@@ -26,6 +28,7 @@ services:
   checkoutservice:
     image:
       repository: ghcr.io/amadidominic15/checkout
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 5050
     resources:
@@ -38,6 +41,7 @@ services:
   currencyservice:
     image:
       repository: ghcr.io/amadidominic15/currency
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 7000
     resources:
@@ -50,6 +54,7 @@ services:
   emailservice:
     image:
       repository: ghcr.io/amadidominic15/email
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 8080
     servicePort: 5000
@@ -63,6 +68,7 @@ services:
   frontend:
     image:
       repository: ghcr.io/amadidominic15/frontend
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 8080
     serviceType: ClusterIP
@@ -76,6 +82,7 @@ services:
   loadgenerator:
     image:
       repository: ghcr.io/amadidominic15/loadgenerator
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     replicas: 1
     users: "10"
@@ -90,6 +97,7 @@ services:
   paymentservice:
     image:
       repository: ghcr.io/amadidominic15/payment
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 50051
     resources:
@@ -102,6 +110,7 @@ services:
   productcatalogservice:
     image:
       repository: ghcr.io/amadidominic15/productcatalog
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 3550
     resources:
@@ -114,6 +123,7 @@ services:
   recommendationservice:
     image:
       repository: ghcr.io/amadidominic15/recommendation
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 8080
     resources:
@@ -126,6 +136,7 @@ services:
   shippingservice:
     image:
       repository: ghcr.io/amadidominic15/shipping
+madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 50051
     resources:
