--- a/.github/workflows/reuseable-build-docker-image.yaml
+++ b/.github/workflows/reuseable-build-docker-image.yaml
@@ -77,7 +77,7 @@ jobs:
     - name: Update tag in Helm chart
       working-directory: ${{ github.workspace }}
       run: |
-          sed -i "/repository:[[:space:]]*${{ env.REGISTRY }}\/${{ github.actor }}\/ad/,/^[^ ]/s/^[[:space:]]*tag:.*/  tag: \"${{ inputs.tag }}\"/" ./helm/microservices-chart/values.yaml
+          yq -i '.checkoutservice.tag = "${{ inputs.tag }}"' ./helm/microservices-chart/values.yaml
 
     - name: login to github
       run: |
