--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -1,7 +1,7 @@
 services:
   adservice:
     image:
-      repository: ghcr.io/amadidominic15/adservice
+      repository: ghcr.io/amadidominic15/ad
       tag: "latest"
     port: 9555
     resources:
@@ -13,7 +13,7 @@ services:
         memory: 300Mi
   cartservice:
     image:
-      repository: ghcr.io/amadidominic15/cartservice
+      repository: ghcr.io/amadidominic15/cart
       tag: "latest"
     port: 7070
     resources:
@@ -26,7 +26,6 @@ services:
   checkoutservice:
     image:
       repository: ghcr.io/amadidominic15/checkout
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 5050
     resources:
@@ -39,7 +38,6 @@ madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
   currencyservice:
     image:
       repository: ghcr.io/amadidominic15/currency
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 7000
     resources:
@@ -52,7 +50,6 @@ madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
   emailservice:
     image:
       repository: ghcr.io/amadidominic15/email
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 8080
     servicePort: 5000
@@ -66,7 +63,6 @@ madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
   frontend:
     image:
       repository: ghcr.io/amadidominic15/frontend
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 8080
     serviceType: ClusterIP
@@ -80,7 +76,6 @@ madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
   loadgenerator:
     image:
       repository: ghcr.io/amadidominic15/loadgenerator
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     replicas: 1
     users: "10"
@@ -95,7 +90,6 @@ madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
   paymentservice:
     image:
       repository: ghcr.io/amadidominic15/payment
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 50051
     resources:
@@ -108,7 +102,6 @@ madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
   productcatalogservice:
     image:
       repository: ghcr.io/amadidominic15/productcatalog
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 3550
     resources:
@@ -121,7 +114,6 @@ madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
   recommendationservice:
     image:
       repository: ghcr.io/amadidominic15/recommendation
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 8080
     resources:
@@ -134,7 +126,6 @@ madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
   shippingservice:
     image:
       repository: ghcr.io/amadidominic15/shipping
-madidominic15/ad/{n;s/tag:.*/tag: "18432088017"/;}
       tag: "latest"
     port: 50051
     resources:
