--- a/.github/workflows/reuseable-build-docker-image.yaml
+++ b/.github/workflows/reuseable-build-docker-image.yaml
@@ -88,4 +88,4 @@ jobs:
       run: |
         git add ./helm/microservices-chart/values.yaml
         git commit -m "Update tag in Helm chart for ${{ inputs.image_name }} to ${{ inputs.tag }}"
-        git push
+        git push origin main
