--- a/.github/workflows/reuseable-build-docker-image.yaml
+++ b/.github/workflows/reuseable-build-docker-image.yaml
@@ -77,7 +77,7 @@ jobs:
     - name: Update tag in Helm chart
       working-directory: ${{ github.workspace }}
       run: |
-          yq -i '.adservice.tag = "${{ inputs.tag }}"' ./helm/microservices-chart/values.yaml
+          yq -i '.adservice.image.tag = "${{ inputs.tag }}"' ./helm/microservices-chart/values.yaml
 
     - name: login to github
       run: |
