Update tag in Helm chart for ad to 18435458013

--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -2,7 +2,7 @@ services:
   adservice:
     image:
       repository: ghcr.io/amadidominic15/ad
-      tag: "latest"
+      tag: "18435458013"
     port: 9555
     resources:
       requests:
