--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -50,7 +50,7 @@ services:
   emailservice:
     image:
       repository: ghcr.io/amadidominic15/emailservice
-      tag: "latest"
+      tag: "18522153893"
     port: 8080
     servicePort: 5000
     resources:
