Update tag in Helm chart for paymentservice to 18522522209

--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -90,7 +90,7 @@ services:
   paymentservice:
     image:
       repository: ghcr.io/amadidominic15/paymentservice
-      tag: "latest"
+      tag: "18522522209"
     port: 50051
     resources:
       requests:
