--- a/.github/workflows/cart.yaml
+++ b/.github/workflows/cart.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'cartservice/**'
       - '.github/workflows/cart.yaml'
+      - '.github/workflows/reuseable-build-docker-image.yaml'
 jobs:
   call-build-scan-and-push-cartservice-image:
     uses: ./.github/workflows/reuseable-build-docker-image.yaml
