--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -14,7 +14,7 @@ services:
   cartservice:
     image:
       repository: ghcr.io/amadidominic15/cartservice
-      tag: "latest"
+      tag: "18523340626"
     port: 7070
     resources:
       requests:
