--- a/helm/microservices-chart/templates/checkoutservice.yaml
+++ b/helm/microservices-chart/templates/checkoutservice.yaml
@@ -20,7 +20,7 @@ spec:
         - name: server
           securityContext:
             {{- toYaml .Values.containerSecurityContext | nindent 12 }}
-          image: {{ .Values.services.checkoutservice.image.repository }}:{{ .Values.services.checkoutservice.image.tag | default .Values.global.imageTag }}
+          image: {{ .Values.services.checkoutservice.image.repository }}:{{ .Values.services.checkoutservice.image.tag }}
           ports:
           - containerPort: {{ .Values.services.checkoutservice.port }}
           readinessProbe:
