--- a/helm/microservices-chart/templates/emailservice.yaml
+++ b/helm/microservices-chart/templates/emailservice.yaml
@@ -21,7 +21,7 @@ spec:
       - name: server
         securityContext:
           {{- toYaml .Values.containerSecurityContext | nindent 10 }}
-        image: {{ .Values.services.emailservice.image.repository }}:{{ .Values.services.emailservice.image.tag | default .Values.global.imageTag }}
+        image: {{ .Values.services.emailservice.image.repository }}:{{ .Values.services.emailservice.image.tag }}
         ports:
         - containerPort: {{ .Values.services.emailservice.port }}
         env:
