--- a/helm/microservices-chart/templates/loadgenerator.yaml
+++ b/helm/microservices-chart/templates/loadgenerator.yaml
@@ -51,7 +51,7 @@ spec:
       - name: main
         securityContext:
           {{- toYaml .Values.containerSecurityContext | nindent 10 }}
-        image: {{ .Values.services.loadgenerator.image.repository }}:{{ .Values.services.loadgenerator.image.tag | default .Values.global.imageTag }}
+        image: {{ .Values.services.loadgenerator.image.repository }}:{{ .Values.services.loadgenerator.image.tag }}
         env:
         - name: FRONTEND_ADDR
           value: "frontend:80"
