--- a/helm/microservices-chart/templates/nginx-ingress.yaml
+++ b/helm/microservices-chart/templates/nginx-ingress.yaml
@@ -3,25 +3,26 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Values.ingress.name }}
-  labels:
-    {{- include "microservices-chart.labels" . | nindent 4 }}
   annotations:
-    alb.ingress.kubernetes.io/ssl-redirect: {{ .Values.ingress.ssl-redirect }}
+    kubernetes.io/ingress.class: "{{ .Values.ingress.className }}"
+    nginx.ingress.kubernetes.io/backend-protocol: "{{ .Values.ingress.backendprotocol }}"
+    nginx.ingress.kubernetes.io/ssl-redirect: "{{ .Values.ingress.sslredirect }}"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "{{ .Values.ingress.forcesslredirect }}"
 spec:
-  ingressClassName: {{ .Values.ingress.className }}
+  ingressClassName: "{{ .Values.ingress.className }}"
   tls:
     - hosts:
-        - {{ .Values.ingress.host }}
-      secretName: {{ .Values.ingress.name }}-tls
+        - "{{ .Values.ingress.host }}"
+      secretName: "{{ .Values.ingress.name }}-tls"
   rules:
-  - host: {{ .Values.ingress.host }}
-    http:
-      paths:
-      - pathType: Prefix
-        path: /
-        backend:
-          service:
-            name: frontend
-            port:
-              number: 80
+    - host: "{{ .Values.ingress.host }}"
+      http:
+        paths:
+          - pathType: Prefix
+            path: /
+            backend:
+              service:
+                name: frontend
+                port:
+                  number: 80
 {{- end }}
