--- a/helm/microservices-chart/templates/shippingservice.yaml
+++ b/helm/microservices-chart/templates/shippingservice.yaml
@@ -20,7 +20,7 @@ spec:
       - name: server
         securityContext:
           {{- toYaml .Values.containerSecurityContext | nindent 10 }}
-        image: {{ .Values.services.shippingservice.image.repository }}:{{ .Values.services.shippingservice.image.tag | default .Values.global.imageTag }}
+        image: {{ .Values.services.shippingservice.image.repository }}:{{ .Values.services.shippingservice.image.tag }}
         ports:
         - containerPort: {{ .Values.services.shippingservice.port }}
         env:
