--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -163,5 +163,7 @@ ingress:
   enabled: true
   name: online-boutique
   className: nginx
-  ssl-redirect: "true"
+  sslredirect: "true"
+  forcesslredirect: "true"
+  backendprotocol: "HTTP"
   host: www.online-boutique.com
