Update tag in Helm chart for checkoutservice to 18648624017

--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -26,7 +26,7 @@ services:
   checkoutservice:
     image:
       repository: ghcr.io/amadidominic15/checkoutservice
-      tag: "latest"
+      tag: "18648624017"
     port: 5050
     resources:
       requests:
