--- a/.github/workflows/reuseable-build-docker-image.yaml
+++ b/.github/workflows/reuseable-build-docker-image.yaml
@@ -88,5 +88,5 @@ jobs:
       run: |
         git add ./helm/microservices-chart/values.yaml
         git commit -m "Update tag in Helm chart for ${{ inputs.image_name }} to ${{ inputs.tag }}"
-        git pull --rebase origin main
+        git pull origin main
         git push origin main
