Update tag in Helm chart for productcatalogservice to 18649354741

--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -102,7 +102,7 @@ services:
   productcatalogservice:
     image:
       repository: ghcr.io/amadidominic15/productcatalogservice
-      tag: "latest"
+      tag: "18649354741"
     port: 3550
     resources:
       requests:
