Update tag in Helm chart for frontend to 18649476939

--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -63,7 +63,7 @@ services:
   frontend:
     image:
       repository: ghcr.io/amadidominic15/frontend
-      tag: "latest"
+      tag: "18649476939"
     port: 8080
     serviceType: ClusterIP
     resources:
