Update tag in Helm chart for shippingservice to 18649655012

--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -126,7 +126,7 @@ services:
   shippingservice:
     image:
       repository: ghcr.io/amadidominic15/shippingservice
-      tag: "latest"
+      tag: "18649655012"
     port: 50051
     resources:
       requests:
