--- a/.github/workflows/recommendation.yaml
+++ b/.github/workflows/recommendation.yaml
@@ -1,4 +1,4 @@
-name: BUILD SCAN PUSH AND UPDATE IMAGE FOR RECCOMENDATION
+name: BUILD SCAN PUSH AND UPDATE IMAGE FOR RECCOMENDATION SERVICE
 
 on:
   push:
