--- a/helm/microservices-chart/values.yaml
+++ b/helm/microservices-chart/values.yaml
@@ -114,7 +114,7 @@ services:
   recommendationservice:
     image:
       repository: ghcr.io/amadidominic15/recommendationservice
-      tag: "latest"
+      tag: "18649901839"
     port: 8080
     resources:
       requests:
