--- a/.github/workflows/eks-and-app-deployment.yaml
+++ b/.github/workflows/eks-and-app-deployment.yaml
@@ -13,8 +13,8 @@ permissions:
 env:
   AWS_REGION: us-west-2
   EKS_CLUSTER_NAME: online-boutique-eks
-  AWS_ROLE_TO_ASSUME: arn:aws:iam::048058681621:role/GH-OIDC-EKS-Deployer-Role
-
+  AWS_ROLE_TO_ASSUME: arn:aws:iam::048058681621:oidc-provider/token.actions.githubusercontent.com
+  
 jobs:
   infrastructure-deployment:
     runs-on: ubuntu-latest
@@ -39,28 +39,3 @@ jobs:
         run: |
            chmod +x script/apply.sh
            ./script/apply.sh
-
-  application-deployment:
-    name: Deploy App with ArgoCD (via kubectl)
-    runs-on: ubuntu-latest
-    needs: infrastructure-deployment
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: "v1.33.0"
-
-      - name: Configure AWS credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          role-to-assume: ${{ env.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Update kubeconfig
-        run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }}
-
-      
