--- a/.github/workflows/eks-and-app-deployment.yaml
+++ b/.github/workflows/eks-and-app-deployment.yaml
@@ -11,7 +11,7 @@ permissions:
   id-token: write       # required for OIDC
   contents: read        # to clone the repo
 env:
-  AWS_REGION: us-north-1
+  AWS_REGION: eu-west-2
   EKS_CLUSTER_NAME: online-boutique-eks
   AWS_ROLE_TO_ASSUME: arn:aws:iam::048058681621:role/github-actions-eks-admin
   
