--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -2,14 +2,15 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: online-boutique
+  namespace: argocd
 spec:
-  projet: default
+  project: default
   destination:
-    server: https://kubernetes.default.svc
+    server: "https://kubernetes.default.svc"
     namespace: online-boutique
   source:
-    repoURL: https://github.com/amadidominic15/online-boutique-store-project
-    path: helm
+    repoURL: "https://github.com/amadidominic15/online-boutique-store-project"
+    path: helm/microservices-chart
     targetRevision: HEAD
   project: default
   syncPolicy:
